ncp-features-example/2.5.1-loadbalancer-crd/03_nginx-web-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-loadbalancer-crd
  namespace: ncp-feature
  labels:
    feature: loadbalancer-crd
spec:
  replicas: 2
  selector:
    matchLabels:
      feature: loadbalancer-crd
  template:
    metadata:
      labels:
        feature: loadbalancer-crd
    spec:
      containers:
      - name: nginx-loadbalancer-crd
        image: nginx:stable-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: nginx
        configMap:
          name: nginx
