ncp-features-example/2.5.1-loadbalancer-crd/04_nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer-crd
  namespace: ncp-feature
  labels:
    feature: loadbalancer-crd 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: loadbalancer-crd
