ncp-features-example/2.5.1-loadbalancer-crd/05_nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-loadbalancer-crd
  namespace: ncp-feature
  labels:
    feature: loadbalancer-crd   
  annotations:
    nsx/loadbalancer: crd-lb 
spec:
  rules:
  - host: loadbalancer-crd.crd-lb.corp.local
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nginx-loadbalancer-crd
          servicePort: 80
  tls:
  - hosts:
    - loadbalancer-crd.crd-lb.corp.local
